[package]
name = "mantis"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
nalgebra = "0.34.1"
rsparse = "1.2.1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
